# Thalapathy-lang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE.json  SECURITY.md
cmake/: THALAPATHYConfig.cmake.in
conf/: formatter.conf
docs/: ASYNC_DESIGN.md  DIAGNOSTICS.md  GRAMMAR.md  IMPLEMENTATION_REPORT.md  IR_SPEC.md  LANGUAGE_AUDIT.md  LANGUAGE_GUIDE.md  LANGUAGE_SPEC.md  MEMORY_MODEL.md  MODULE_SYSTEM.md  NANBA_NANBI.md  NATIVE_RUNTIME_BRIDGE.md  OOP_SYNTAX_COMPATIBILITY_AUDIT.md  POLITICAL_SATIRE.md  README.md  ROADMAP.md  STANDARD_LIBRARY.md  TDK.md  TDK_COMMANDS.md  TDK_INSTALLATION.md  THALAIVALAI_WEB.md  THALAPATHY_ACTION_VOCABULARY.md  THALAPATHY_API_LEXICON.md  THALAPATHY_IDENTITY_AUDIT.md  THALAPATHY_REFERENCES.md  TOOLCHAIN.md  TRIBUTE.md  TYPE_SYSTEM.md  V010_AUDIT_REPORT.md  VIJAY_BINARY_FORMAT.md  VIJAY_STDLIB_NAMING_MATRIX.md
editors/vscode-thalapathy/: .vscodeignore  convert-icon.mjs  language-configuration.json  package-lock.json  package.json  vscode-thalapathy-0.1.0.vsix
editors/vscode-thalapathy/icons/: thalapathy-icon-theme.json
editors/vscode-thalapathy/syntaxes/: thalapathy.tmLanguage.json
examples/: arrays.tvk  classes.tvk  conditions.tvk  control_flow.tvk  errors.tvk  functions.tvk  hello.tvk  inheritance.tvk  lambdas.tvk  loops.tvk  maps.tvk  modern_features.tvk  operators.tvk  recursion.tvk  variables.tvk
examples/hello/: hello.tvk
examples/mass/: full_language.tvk  nanba_nanbi.tvk  thalaiva_syntax.tvk
examples/modules/: imports.tvk
examples/stdlib/: io_demo.tvk  scanner_demo.tvk
examples/web/: api_client.tvk  api_server.tvk  rest_api.tvk
examples/web/02_alangaaram/: main.tvk
examples/web/02_alangaaram/alangaaram/: mass.css
examples/web/02_alangaaram/nadanam/: mass.js
examples/web/02_alangaaram/paarvai/: veedu.html
include/thalapathy/: Toolchain.hpp
include/thalapathy/ast/: AST.hpp
include/thalapathy/cli/: CLI.hpp
include/thalapathy/diagnostics/: Diagnostics.hpp
include/thalapathy/distribution/: ReleaseMetadata.hpp
include/thalapathy/format/: Formatter.hpp  FormatterConfig.hpp
include/thalapathy/installation/: TdkHome.hpp
include/thalapathy/interpreter/: Interpreter.hpp
include/thalapathy/ir/: IR.hpp
include/thalapathy/lexer/: Lexer.hpp  Token.hpp
include/thalapathy/module/: Module.hpp  ModuleGraph.hpp  ModuleLoader.hpp  ModuleResolver.hpp
include/thalapathy/net/: Net.hpp
include/thalapathy/parser/: Parser.hpp
include/thalapathy/personality/: Personality.hpp
include/thalapathy/project/: ProjectManifest.hpp
include/thalapathy/runtime/: Environment.hpp  Value.hpp
include/thalapathy/semantic/: Resolver.hpp  Symbol.hpp
include/thalapathy/types/: Types.hpp
include/thalapathy/version/: Version.hpp
legal/: THIRD_PARTY_NOTICES.md
lib/std/: adayalam.tvk  arasu.tvk  bathil.tvk  collections.tvk  datetime.tvk  db.tvk  deva.tvk  http.tvk  io.tvk  irukkalaam.tvk  jilla.tvk  json.tvk  kalanjiyam.tvk  kootam.tvk  kootu.tvk  log.tvk  math.tvk  muthirai.tvk  neram.tvk  os.tvk  ozhungu.tvk  random.tvk  regex.tvk  satham.tvk  sivakasi.tvk  text.tvk  thalaivalai.tvk  time.tvk  udhaya.tvk  vaanganna.tvk  vaseegara.tvk  velayudham.tvk  vettaikaaran.tvk  villu.tvk  web.tvk  yaarunee.tvk
scripts/: generate_messages.py  negative_audit.py
src/: main.cpp
src/api/: Toolchain.cpp
src/cli/: CLI.cpp
src/diagnostics/: Diagnostics.cpp
src/distribution/: ReleaseMetadata.cpp
src/format/: Formatter.cpp  FormatterConfig.cpp
src/installation/: TdkHome.cpp
src/interpreter/: Interpreter.cpp
src/ir/: IR.cpp
src/lexer/: Lexer.cpp
src/module/: ModuleGraph.cpp  ModuleLoader.cpp  ModuleResolver.cpp
src/net/: Net.cpp
src/parser/: Parser.cpp
src/personality/: Personality.cpp  PersonalityMessages.cpp
src/project/: ProjectLoader.cpp
src/semantic/: Resolver.cpp
src/tdk/: TDKMain.cpp
src/tdk/commands/: BuildCommand.cpp  CheckCommand.cpp  CleanCommand.cpp  DoctorCommand.cpp  EnvCommand.cpp  HomeCommand.cpp  InfoCommand.cpp  InitCommand.cpp  InspectCommand.cpp  ListToolsCommand.cpp  NaduCommand.cpp  NewCommand.cpp  NewWebCommand.cpp  PackageCommand.cpp  RunCommand.cpp  TDKCommand.hpp  TDKUtils.hpp  ThalapathifyCommand.cpp  VersionCommand.cpp
src/tools/: ThalaFmt.cpp  VijayDump.cpp
tests/: main.cpp
tests/cli/: BuildFlagTests.cpp  CLICompatibilityTests.cpp  CLIConflictTests.cpp  CLITests.cpp  CheckFlagTests.cpp  EmitIRTests.cpp  HelpFlagTests.cpp  SimpleRunTests.cpp  VersionFlagTests.cpp
tests/diagnostics/: DiagnosticsTests.cpp
tests/interpreter/: AsyncThalaivalaiTests.cpp  FeaturesTests.cpp  InterpreterTests.cpp
tests/ir/: IRTests.cpp
tests/lexer/: LexerTests.cpp
tests/parser/: ParserTests.cpp
tests/personality/: PersonalityTests.cpp
tests/runtime/: RuntimeTests.cpp
tests/semantic/: ResolverTests.cpp
tests/tdk/: TDKTests.cpp
tests/tools/: ThalaFmtTests.cpp  VijayDumpTests.cpp
